vlib/v/parser/tests/global_reserved_name_err.vv
@[has_globals]
module main

__global (
	array [16]int
)

fn main() {
}
